src/human_study/program_47/python_err_msg.txt
File "./seq2parse/human_study/program_47/original.py", line 2
    if !n:
       ^
SyntaxError: invalid syntax
